--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,20 @@
 .item-list-container h1 {
     font-size: 2rem;
-    color: #264653; /* Azul Profundo */
+    color: #FEF9E4;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     margin-top: 4rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.contenedorProducts {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 3 columnas de igual tamaño */
+    gap: 20px; /* Espacio entre las cards */
+    width: 100%; /* Ajusta el ancho del contenedor */
+    max-width: 1200px; /* Tamaño máximo del contenedor */
+    margin: 3rem auto; /* Centrar horizontalmente */
 }
