--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -1,35 +1,164 @@
-/* Navbar.css */
-/* Contenedor */
+/* Estilos generales para el Navbar */
 .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    background-color: #fff1e6; /* Fondo en Azul Profundo */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-family: 'Montserrat', sans-serif; /* Aplica Montserrat solo al Navbar */
-    width: 100%;
-    height: auto;
-    margin-top: 0;
+    background-color: #f9f3e5; /* Color de fondo moderno */
+    padding: 15px 30px;
+    height: 80px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra sutil */
 }
-
-.logo-container {
+.img-container {
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
 .logo {
-    width: 7rem;
-    height: 8rem;
-    margin-right: 10px;
+    width: 20%;
+    height: auto;
+}
+
+/* Contenedor para la frase en el medio */
+.navbar-center {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+}
+.navbar-center a {
+    margin: 2rem;
 }
 
 
-/* Estilo del widget del carrito */
-.cart-widget {
-    color: #FFF1E6; /* Color Crema Suave */
+/* Estilos para el carrito */
+.cart-container {
+    position: relative;
 }
 
-.cart-widget:hover {
-    color: #8D4F3F; /* Color Terracota Oscuro al pasar el cursor */
+.cart-icon {
+    font-size: 1.8rem;
+    color: white;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s ease;
 }
+
+.cart-icon:hover {
+    transform: scale(1.1);
+}
+
+/* Estilo para el contador en el carrito */
+.cart-counter {
+    position: absolute;
+    top: -5px;
+    right: -8px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2.5px 5px;
+    font-size: 0.7rem;
+    font-weight: bold;
+}
+
+/* Estilos del detalle del carrito */
+.cart-details {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 300px;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+.cart-details ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.cart-details li {
+    padding: 8px 0;
+    font-size: 1rem;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.cart-details li span {
+    font-weight: bold;
+}
+
+.cart-details button {
+    width: 100%;
+    padding: 10px;
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+
+.cart-details button:hover {
+    background-color: #c0392b;
+}
+
+
+.Nav-frase {
+    font-size: 1rem;
+    color: #e1fbf7;
+}
+
+/* Ajustes de responsive */
+@media (max-width: 768px) {
+.navbar {
+    flex-direction: column;
+    text-align: center;
+}
+
+.navbar-center {
+    margin: 10px 0;
+}
+
+.cart-details {
+    right: 50%;
+    transform: translateX(50%);
+}
+}
+  
+
+  /* Estilos para la sección de publicidad */
+/* Estilo para la sección de publicidad sobre el navbar */
+.navbar-ad {
+    background-color: #50B1B3; /* Color verde claro con 80% de opacidad */
+    color: #fff; /* Color de texto blanco para contraste */
+    padding: 10px 20px; /* Espaciado alrededor del texto */
+    display: flex; /* Usamos flexbox para alinear el contenido */
+    align-items: center; /* Alineamos verticalmente en el centro */
+    justify-content: space-between; /* Espacio entre el logo y el texto */
+    font-size: 14px; /* Tamaño de fuente pequeña pero legible */
+    position: relative; /* Asegura que los elementos hijos puedan estar posicionados dentro */
+    z-index: 10; /* Asegura que esta sección esté por encima del navbar */
+    height: 1.5rem; /* Ajusta la altura para que sea más visible */
+  }
+  
+  /* Estilo para el logo de Instagram */
+  .instagram-icon {
+    width: 14px; /* Ajusta el tamaño según tus necesidades */
+    height: 14px;
+  }
+  
+  /* Estilo para el texto de la sección de publicidad */
+  .ad-text {
+    flex: 1; /* Ocupa el espacio restante */
+    text-align: center; /* Centramos el texto */
+  }
+  
